fix tree view not collapsing

--- a/app/assets/stylesheets/ontologies.scss
+++ b/app/assets/stylesheets/ontologies.scss
@@ -186,7 +186,7 @@ $ont-show-bg-color: #e9ecef;
 }
 
 #bd_content .sidebar {
-  white-space: nowrap;
+  white-space: wrap;
   min-height: 70vh;
   max-height: 90vh;
 }
